fixed image covering all the page

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
   color: white;
   background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   text-align: center;
 }
 
